--- a/src/pages/Home/Components/ChooseUs/ChooseUs.css
+++ b/src/pages/Home/Components/ChooseUs/ChooseUs.css
@@ -3,3 +3,15 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+.accordion-item .accordion-button {
+  background-color: #eee;
+}
+
+.accordion-button:focus {
+  box-shadow: 0 0 0 0;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #dc3545;
+}
